--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@feathersjs/client",
   "description": "A module that consolidates Feathers client modules for REST (jQuery, Request, Superagent) and Websocket (Socket.io, Primus) connections",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/feathersjs/client.git"
@@ -54,7 +54,7 @@
     "@feathersjs/errors": "3.0.0",
     "@feathersjs/authentication-client": "1.0.0",
     "@feathersjs/primus-client": "1.0.0",
-    "@feathersjs/rest-client": "https://github.com/frank-dspeed/rest-client#patch-1",
+    "@feathersjs/rest-client": "https://github.com/stealify/feathers-rest-client",
     "@feathersjs/socketio-client": "https://github.com/frank-dspeed/socketio-client#patch-1"
   },
   "devDependencies": {
