--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "@feathersjs/feathers": "3.0.0",
     "@feathersjs/errors": "3.0.0",
     "@feathersjs/authentication-client": "1.0.0",
-    "@feathersjs/primus-client": "1.0.0",
+    "@feathersjs/primus-client": "https://github.com/stealify/feathers-primus-client",
     "@feathersjs/rest-client": "https://github.com/stealify/feathers-rest-client#master",
-    "@feathersjs/socketio-client": "https://github.com/frank-dspeed/socketio-client#patch-1"
+    "@feathersjs/socketio-client": "https://github.com/frank-dspeed/socketio-client#master"
   },
   "devDependencies": {
     "@feathersjs/commons": "^1.2.0",
